@@ -1,4 +1,4 @@
-/* $Id: gtk_acpi.hh,v 1.17 2002/12/20 09:55:51 thoma Exp $ */
+/* $Id: gtk_acpi.hh,v 1.18 2002/12/20 22:12:05 thoma Exp $ */
 /*  Copyright (C) 2002 Malte Thoma
  *
  *  This program is free software; you can redistribute it and/or modify
@@ -39,22 +39,21 @@
 #include <gtk--/menu.h>
 #include <map>
 #include "FileFinder.hh"
-
+#include "Gizmo.hh"
 
 class gtk_acpi : public gtk_acpi_glade
 {  
         Gtk::Menu *menu;
+        GraphDrawingArea *GDA;
+        FileFinder FF;
+
         heatload::st_widget show_widget;
-        const bool read_max_cap_;
         heatload::st_show show_what;
         heatload::st_color color;
-        bool use_max_cap;
         mutable bool show_sudo;
-        int max_cap,last_max_cap;
         
         friend class gtk_acpi_glade;
         friend class WindowInfo;
-
 
         struct st_throttling{std::string tstate;int state;std::string prozent;
                st_throttling() : state(-1),prozent("?") {}
@@ -69,41 +68,13 @@ class gtk_acpi : public gtk_acpi_glade
         std::vector<st_performance> vec_performance;
 
 
-        struct st_ac_adapter{std::string state;};
         struct st_cpu{st_throttling throttling;st_performance performance;};
-        struct st_cpu_load{guint load;};
-        struct st_thermal{guint temp;std::string einheit;
-                          std::string cooling_mode;
-               st_thermal() {}
-               st_thermal(guint t1,std::string e,std::string c)
-                  : temp(t1),einheit(e),cooling_mode(c){}
-               std::string Celsius() const 
-                  { if(einheit=="C") return itos(temp)+"C   ";
-                    else if(einheit=="dK") return itos(int((temp/10.)-273.15))+"C   ";
-                    else return "unknown unit of tempertur, please contact thoma@muenster.de\n";
-                   }};
-        struct st_battery{bool present;bool charging; int present_rate_mW; 
-                          int remaining_capacity_mWh;int max_capacity_mWh;
-                          int last_max_capacity_mWh;
-               st_battery() :present(false),charging(false),present_rate_mW(0),
-                         remaining_capacity_mWh(0),max_capacity_mWh(0),
-                         last_max_capacity_mWh(0) {}
-               st_battery(const bool p,const bool c,const int pr,
-                          const int r,const int m,const int lm)
-                  : present(p),charging(c),present_rate_mW(pr),
-                    remaining_capacity_mWh(r),max_capacity_mWh(m),
-                    last_max_capacity_mWh(lm) {}
-               const double prozent() const {return double(remaining_capacity_mWh)/max_capacity_mWh;}
-               const double prozent_last() const {return double(remaining_capacity_mWh)/last_max_capacity_mWh;}
-               const std::string prozent_string() const {return ::itos(int(prozent()*100))+"%";}
-               const std::string prozent_last_string() const {return ::itos(int(prozent_last()*100))+"%";}
-                };
-              
-        st_ac_adapter ac_adapter;
+        Gizmo ac_adapter;
         st_cpu cpu;
-        st_thermal thermal;
-        st_battery battery;
-        st_cpu_load cpu_load;
+        GizmoThermal thermal;
+        Gizmo fan;
+        GizmoBattery battery;
+        Gizmo cpu_load;
 
         void init();
         void menu_init();
@@ -118,9 +89,7 @@ class gtk_acpi : public gtk_acpi_glade
         void show_sudo_error();
         void show_run_time_options();
 
-        void read_max_cap();
         void show_values();
-        std::string remaining_time();
         void get_values();
         void get_ac_adapter();        
         void get_thermal();        
@@ -136,8 +105,6 @@ class gtk_acpi : public gtk_acpi_glade
         void set_color(Gtk::Widget &W,const std::string &color);
         void hide_or_show_elements();
 
-        GraphDrawingArea *GDA;
-        FileFinder FF;
         gint on_gtk_acpi_delete_event(GdkEventAny *ev);
         gint on_gtk_acpi_key_press_event(GdkEventKey *ev);
         void ende();
