@@ -190,3 +190,9 @@
 
 2002/12/20 8:33:36 CET
 	update files from .glade file
+
+2002/12/20 10:04:46 CET
+	update files from .glade file
+
+2002/12/20 10:17:21 CET
+	update files from .glade file
